<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:onClick="addAzucar"
        android:text="@string/azucar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
       
        android:onClick="addLeche"
        android:text="@string/leche"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
       
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:onClick="addHarina"
        android:text="@string/harina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />


    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
       
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="addMantequilla"
        android:text="@string/mantequilla"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="160dp"
       
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="addAceite"
        android:text="@string/aceite"
        app:layout_constraintStart_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button5"
       
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:onClick="addSal"
        android:text="@string/sal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:onClick="addLevadura"
        android:text="@string/levadura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button16"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:onClick="addCacao"
        android:text="@string/cacao"
        app:layout_constraintStart_toStartOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button17"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:onClick="addCafe"
        android:text="@string/cafe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/button18"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:onClick="addChocolate"
        android:text="@string/chocolate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16"
        app:layout_constraintVertical_bias="0.031" />

</androidx.constraintlayout.widget.ConstraintLayout>